<resources>
    <string name="app_name">EjemplosFirebase</string>
    <string name="hint_email">Capture el email</string>
    <string name="hint_password">Agregue el password</string>
    <string name="create_account_button">Crear cuenta</string>
    <string name="button_sign_in">Sign In</string>
    <string name="welcome_to_platzi">Bienvenido a Platzi</string>
    <string name="signout_button">SignOut</string>
    <string name="button_forgotten_password">Password Olvidado</string>
    <string name="facebook_app_id">962122567915637</string>
    <string name="fb_login_protocol_scheme">fb962122567915637</string>
    <string name="button_realtime">Realtime Database</string>
    <string name="add_artist">Agregar Artista</string>
    <string name="btn_download">Descarga imagen</string>
    <string name="btn_upload">Subir imagen</string>
    <string name="button_storage">Firebase Storage</string>
    <string name="msg_token_fmt">Token Notifications</string>
    <string name="button_notifications">Notificaiones firebase</string>
    <string name="btn_sincronizar">Sincronizar configuracion</string>
    <string name="btn_remote_config">Configuracion Remota</string>

</resources>